--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -1,15 +1,15 @@
-pip install -r requirements.txt
 name: Python Package using Conda
 
-on: [push]
+on: [push, pull_request]
 
 jobs:
-  build-linux:
-    runs-on: ubuntu-latest
+  build:
+    runs-on: ${{ matrix.os }}
     strategy:
       max-parallel: 5
       matrix:
-        python-version: [3.8, 3.9, 3.10]  # Test on multiple Python versions
+        os: [ubuntu-latest, windows-latest, macos-latest]
+        python-version: [3.8, 3.9, 3.10]
 
     steps:
     - uses: actions/checkout@v4
@@ -20,7 +20,7 @@ jobs:
         python-version: ${{ matrix.python-version }}
         activate-environment: base
         auto-update-conda: true
-        miniforge-variant: Miniconda  # Use Miniconda as a fallback installer
+        miniforge-variant: Miniconda
 
     - name: Cache conda
       uses: actions/cache@v3
@@ -43,3 +43,24 @@ jobs:
       run: |
         conda install pytest
         pytest
+
+  publish:
+    if: github.event_name == 'release'
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v4
+
+    - name: Set up Miniconda
+      uses: conda-incubator/setup-miniconda@v2
+      with:
+        python-version: 3.9
+        activate-environment: base
+
+    - name: Install dependencies
+      run: conda env update --file environment.yml --name base
+
+    - name: Build and publish to PyPI
+      run: |
+        pip install twine
+        python setup.py sdist bdist_wheel
+        twine upload dist/*
