--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -1,41 +1,40 @@
-name: Python application
+name: Python Package using Conda
 
-on:
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
-
-permissions:
-  contents: read
+on: [push]
 
 jobs:
-  build:
+  build-linux:
     runs-on: ubuntu-latest
     strategy:
-      matrix:
-        python-version: [3.8, 3.9, 3.10]
+      max-parallel: 5
 
     steps:
-    - uses: actions/checkout@v4
-    - name: Set up Python
+    - name: Checkout code
+      uses: actions/checkout@v4
+
+    - name: Set up Python 3.10
       uses: actions/setup-python@v3
       with:
-        python-version: ${{ matrix.python-version }}
+        python-version: '3.10'  # Ensure the version is in quotes
+
+    - name: Set up Conda
+      uses: conda-incubator/setup-miniconda@v2
+      with:
+        auto-update-conda: true
+        python-version: '3.10'
+        environment-file: environment.yml
+        activate-environment: base
+
     - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install flake8 pytest safety
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+      run: conda env update --file environment.yml --name base
+
     - name: Lint with flake8
       run: |
-        # stop the build if there are Python syntax errors or undefined names
+        conda install -c conda-forge flake8
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-    - name: Check security vulnerabilities
-      run: |
-        safety check
+
     - name: Test with pytest
       run: |
+        conda install -c conda-forge pytest
         pytest
